--- a/resources/sass/sections/_mobile.scss
+++ b/resources/sass/sections/_mobile.scss
@@ -3,6 +3,12 @@
 and (min-device-width : 320px)
 and (max-device-width : 767px) {
 
+    /* --- general ----*/
+
+    h2 {
+      font-size: 2.3rem !important;
+    }
+
   /* --- header section ----*/
   header {
     .sticky {
